# Django_progect

./: README.md  catalog_category.json  catalog_data.json  catalog_product.json  confg.py  data.json  database.ini  pyproject.toml
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: delete.py  load_data.py  loaddata.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_category_description_alter_product_description.py  0004_alter_product_category_alter_product_image.py  0005_alter_product_name.py  0006_alter_product_name.py  0007_blog.py  0008_alter_blog_options_alter_blog_count_views_and_more.py  0009_alter_blog_count_views.py  0010_alter_blog_count_views.py  0011_alter_blog_slug.py  0012_alter_blog_slug.py  0013_alter_blog_create_date.py  0014_alter_product_creation_date_and_more.py  0015_product_is_publication.py  0016_rename_is_publication_product_is_publicate.py  0017_version.py  0018_alter_version_options_and_more.py  0019_product_owner.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contacts.html  home.html  index.html  product._detailhtml  product.html  product_confirm_delete.html  product_form.html  product_form_with_formset.html  product_list.html
catalog/templatetags/: catalog_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_created_at_user_token.py
users/templates/users/: email_reset.html  (+8 more)
(+4 files in other folders)
